FIx overflow scroll

--- a/components/Ballot/Ballot.module.scss
+++ b/components/Ballot/Ballot.module.scss
@@ -59,6 +59,7 @@
 }
 
 .raceContent {
+  width: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
